# raggedy_anndy

./: APACHE_LICENSE.md  Cargo.toml  LICENSE.md  MIT_LICENSE.md  Makefile  README.md  results.csif  results.csv
docs/: architecture.md
profiles/: default.toml
src/: context.rs  curve.rs  embed.rs  eval.rs  flat.rs  header.rs  ivf.rs  ivfpq.rs  kmeans.rs  lib.rs  main.rs  metric.rs  opq.rs  par.rs  persist.rs  pq.rs  recall.rs  seed.rs  sweep.rs  time_index.rs  types.rs
